--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
   margin-top: 25px;   /* razmak ispod teksta */
   margin-bottom: 25px; /* prije footera */
 }
+    .whispers {
+  pointer-events: none;
+  z-index: 0;
+  position: fixed;
+  inset: 0;
+}
+
+.content {
+  position: relative;
+  z-index: 5;
+}
   </style>
 </head>
 <body>
@@ -396,6 +407,7 @@
 </body>
 
 </html>
+
 
 
 
