--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
   transition: border-color .2s ease, background .2s ease;
 }
 #whisperInput::placeholder{ color:#6f6f6f; }
+    #whisperInput{
+  color: white;
+}
 #whisperInput:focus{
   border-color:#555;
   background: rgba(18,18,18,.9);
@@ -456,6 +459,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
