--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ setInterval(async () => {
 const WHISPR_MIN_AMOUNT = 1;
 
 /** SPL MINT ADRESA — zamijeni čim izdaš token */
-const WHISPR_MINT = 'YOUR_SPL_MINT_ADDRESS';
+const WHISPR_MINT = '3GArCrYyJDxtc99RMZcDQkEaX7EpSks8cYF2smC4pump';
 
 /** oslonimo se na postojeći db; ako ga nema, probaj iz firebase-a */
 const DB = (typeof db !== 'undefined') ? db : (firebase && firebase.database ? firebase.database() : null);
@@ -761,6 +761,7 @@ db.ref('whispers')
 </body>
 
 </html>
+
 
 
 
